--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,16 @@
     <build>
         <finalName>YGO-online</finalName>
         <plugins>
+            <plugin>
+                <!-- maven编译插件 -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
             <!-- mybatis 逆向工程插件 -->
             <plugin>
                 <groupId>org.mybatis.generator</groupId>
