使用新设计

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,6 +19,11 @@
         <param-value>1800000</param-value>
     </context-param>
 
+    <context-param>
+        <param-name>webAppRootKey</param-name>
+        <param-value>ygoService.root</param-value>
+    </context-param>
+
     <listener>
         <listener-class>
             org.springframework.web.util.Log4jConfigListener
