--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>helloclyde.com.cn</groupId>
+    <groupId>cn.com.helloclyde</groupId>
+    <artifactId>YgoService</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <artifactId>YGO-online</artifactId>
+
+
     <packaging>war</packaging>
-    <name>YGO-online Maven WebApp</name>
+    <name>YgoService Maven WebApp</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -16,12 +18,6 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
-        </dependency>
 
         <!-- SpringFrame Start -->
         <dependency>
@@ -150,6 +146,14 @@
             <version>2.3.1</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+
+
         <!-- 文件上传 -->
         <dependency>
             <groupId>commons-fileupload</groupId>
@@ -169,6 +173,7 @@
             <artifactId>jcabi-aspects</artifactId>
             <version>0.22.5</version>
         </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -178,7 +183,7 @@
     </dependencies>
 
     <build>
-        <finalName>YGO-online</finalName>
+        <finalName>YgoService</finalName>
         <plugins>
             <plugin>
                 <!-- maven编译插件 -->
@@ -231,6 +236,4 @@
             </plugin>
         </plugins>
     </build>
-
-    
 </project>
